configuration/kube-prometheus-stack/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`k0s-controlplane.anyops.dev`) && PathPrefix(`/grafana`)"
      middlewares:
        - name: strip-prefix
          namespace: monitoring
      kind: Rule
      services:
        - kind: Service
          name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
    - match: "Host(`grafana.anyops.dev`)"
      kind: Rule
      services:
        - kind: Service
          name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
    - match: "Host(`prometheus.anyops.dev`)"
      kind: Rule
      services:
        - kind: Service
          name: kube-prometheus-stack-prometheus
          namespace: monitoring
          port: 9090
